Changed padding bottom in inlin e style to get the modal's to stop overlapping.

--- a/src/assets/styles/_landForSale.scss
+++ b/src/assets/styles/_landForSale.scss
@@ -50,34 +50,21 @@
 
 .PriceModal
 {
-  padding:10px;
-  // right: 235px;
-  color:black;
-  background: white;
+    padding: 5px;
+    margin: 15px;
+    color:black;
+    background: white;
 
 }
   .ModalPointer
 
   { 
-//      border-left:15px;
-//      border-right:15px;
-// //     border-width: 15px 15px 0px 15px; // bottom border-width is 0px so the triangle is directed downwards
-//     border-color:white transparent transparent transparent;
-//     border-style: solid;
-border-left: 15px solid transparent;
-border-right: 15px solid transparent;
-border-top: 15px solid white;
-bottom: -15px;
-right: 14px;
-    
-  
-    right: 14px;
-    position: absolute;
-    // /* margin-bottom: 33px; */
-    
-    // */color: black
-   
-
-         }
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 15px solid white;
+    bottom: -10px;;
+    right: 18px;
+    position: absolute;   
+  }
 
 
